src/App.css
.header-nav {
	display: flex;
	align-items: center;
	justify-content: space-between;
	height: 10vh;
	padding: 0;
	background-color: #ffffff;
	position: relative;
	margin-bottom: 3.5vh;
}

.logo {
	font-size: 2rem;
	font-family: 'Poppins', sans-serif;
	font-style: normal;
	font-weight: 700;
	line-height: normal;
	text-transform: capitalize;
}

.nav {
	color: #000;
	transition: transform 0.3s ease;
	margin-left: auto;
}

.responsive-nav {
	transform: translateY(0);
}
  
.alt-color {
	color: #635BE6;
}
  
.navbar-nav {
	color: #000;
	padding: 0;
	margin: 0;
	list-style: none;
	gap: 1rem;
	display: flex;
}
  
.logo {
	color: inherit;
	text-decoration: none;
}

.nav-link {
	margin: 0;
	color: inherit;
	text-decoration: none;
	cursor: pointer;
}

.nav-link.active {
	font-weight: bold;
	color: inherit;
	background-color: #635BE6;
}
  
.nav-item:hover {
	background-color: #777;
}

header .nav-btn {
	padding: 0;
	cursor: pointer;
	background: transparent;
	border: none;
	outline: none;
	color: inherit;
	visibility: hidden;
	opacity: 0;
	font-size: 1.8rem;
}
  
.greetings {
	color: #606060;
	font-family: 'Poppins', sans-serif;
	font-size: 1.875rem;
	font-style: normal;
	font-weight: 700;
	line-height: normal;
	letter-spacing: 0.403rem;
}
  
.intro-1 {
	color: #000;
	font-family: 'Poppins', sans-serif;
	font-size: 2.5rem;
	font-style: normal;
	font-weight: bolder;
	line-height: normal;
}
  
.header-hr {
	background-color: #635BE6;
}
  
.intro-2 {
	max-width: 78%;
	line-height: normal;
}
  
  /* FOOTER */
  
.text-center {
	display: flex;
	justify-content: space-between;
}
  
.foot {
	display: inline-block;
}
  
.footerIcon {
	font-size: larger;
	text-align: center;
	text-decoration: none;
}
  
.footerIcon:hover {
	opacity: 0.7;
}
  
.footerIconFab {
	color:  #5F5F5F;
}
  
.footerIconFab:hover {
	color: white;
	background:  #5F5F5F;
}
  
.footerIconTwi {
	color: #5F5F5F;
}
  
.footerIconTwi:hover {
	color: #5F5F5F;
	background: white;
}

.footerIconLin {
	color: #5F5F5F;
}

.footerIconLin:hover {
	color: white;
	background: #5F5F5F;
}

.footerIconInsta {
	color: #5F5F5F;
}

.footerIconInsta:hover {
	color: white;
	background: #5F5F5F;
}

.footerIconGit {
	color: #5F5F5F;
}

.footerIconGit:hover {
	color: white;
	background: #5F5F5F;
}

.button-container {
	display: flex;
	justify-content: space-between;
}

.button-link {
	text-decoration: none;
	color: inherit;
}

.button-1 {
	font-size: 1.125rem;
	padding: 0.625rem 2.5rem 0.625rem 2.5rem;
	background-color: #635BE6;
	color: #ffffff;
	border: 2.5px solid #635BE6;
	cursor: pointer;
	font-style: normal;
	font-weight: 700;
	line-height: normal;
	text-transform: capitalize;
}

.button-1:hover {
	background-color: #A7A3Eb;
}

.button-2 {
	font-size: 1.125rem;
	padding: 0.625rem 2.5rem 0.625rem 2.5rem;
	background-color: white;
	color: black;
	border: 2.5px solid black;
	cursor: pointer;
	font-style: normal;
	font-weight: 700;
	line-height: normal;
	text-transform: capitalize;
}

.button-2:hover {
	background-color: #E0E0E0;
}

.highlight-card {
margin-top: 10vh;
}

.readmore-button {
	border: none;
	background-color: inherit;
	padding: 0;
	font-size: 16px;
	color: inherit;
	cursor: pointer;
	display: inline-block;
	font-weight: bold;
}

.button-div {
	border: 1px solid black;
	display: inline-block;
}

.mb-4 {
	width: 100%;
}

.list-style-custom {
	list-style: disc;
	list-style-position: inside;
	padding-left: 0.2em;
} 

.project-container {
	margin: auto;
}

.bi-box-arrow-up-right {
	font-size: 1.2rem;
	color: white;
	padding: 0;
}

@media only screen and (max-width: 768px) {
	.header-nav {
		justify-content: space-between;
		max-width: 100vw;
		padding: 0 1rem 0 0;
	}

	header .nav-btn {
		visibility: visible;
		opacity: 1;
	}

	.nav {
		position: fixed;
		top: 0;
		left: 0;
		height: 100%;
		width: 100%;
		display: flex;
		flex-direction: column;
		align-items: center;
		text-align: center;
		justify-content: center;
		gap: 0;
		background-color: #635BE6;
		transition: 1s;
		transform: translateY(-100vh);
		z-index: 1;
	}

	nav .nav-close-btn {
		position: absolute;
		top: 2rem;
		right: 2rem;
	}

	.nav-link {
		font-size: 1.15rem;
	}

	header .responsive-nav {
		transform: translateY(0);
	}
	
	.logo {
		margin-right: auto;
	}

	.navbar-nav {
		gap: 1rem;
	}

	.nav-link.active {
		font-weight: bold;
		color: white;
	}

	.greetings {
		font-size: 1.375rem;
	}

	.intro-1 {
		font-size: 1.85rem;
	}

	.intro-2 {
		max-width: 100%;
	}

	.container { 
		display: block;
		padding: 0rem;
		margin-left: 0;
		overflow-x: hidden;
	}

	.bulletpoints {
		padding: 0;
	}

	.mb-4 {
		max-width: 100%;
		margin-left: 0;
		margin-right: 0;
		margin-top: 1rem;
	}

	.button-1, .button-2 {
		font-size: 0.9rem;
	}
}

@media (min-width: 768px) {
	.project-container {
		display: flex;
		justify-content: center;
		max-width: 800px;
		margin: auto;
	}
}

